# FeedFetcher

./: # MP3 Combiner.md  .gitignore  AudioAnalyzer.cpp  AudioAnalyzer.h  CLoginDialog.cpp  CLoginDialog.h  CMakeLists.txt  FeedDownloader.cpp  FeedDownloader.h  FeedFetcher.sln  FeedFetcher_1.vcxproj  Merged_Baofeng_Channels.csv  README.md  app_logic.cpp  app_logic.h  app_logic.py  build.bat  feed_fetcher.cpp  main.cpp  resource.h  resource.rc  setup.py  transcribe.py
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  main.yml  msbuild.yml
python_scripts/: setup.py  transcribe.py  transcriber.py
scripts/: fetch_feeds.bat
